fix(gallery): element visibility problems

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -100,6 +100,9 @@
 	color: white;
 	font-size: 1.2rem;
 	font-family: sans-serif;
+	padding: 0.2rem 0.4rem;
+	border-radius: 0.2rem;
+	background-color: rgba(0, 0, 0, 0.5);
 	user-select: none;
 }
 
@@ -146,8 +149,12 @@
 	top: 20px;
 	right: 30px;
 	font-size: 2rem;
+	padding-left: .2rem;
+	height: 2.5rem;
+	aspect-ratio: 1/1;
+	background-color: rgba(0, 0, 0, 0.5);
 	color: white;
 	cursor: pointer;
-	background: none;
 	border: none;
+	border-radius: 50%;
 }
